--- a/client/src/pages/Login.css
+++ b/client/src/pages/Login.css
@@ -5,44 +5,15 @@
   flex-direction: column;
   gap: 20px;
   height: 100vh;
-  background-color: #f8f9fd;
-  background-image: url(https://source.unsplash.com/random/1920x1080/?wallpaper,landscape);
-  background-repeat: no-repeat;
-}
-
-input[type="text"],
-input[type="password"] {
-  height: 25px;
-  border: 1px solid rgba(0, 0, 0, 0.2);
-}
-
-input[type="submit"] {
-  margin-top: 10px;
-  cursor: pointer;
-  font-size: 15px;
-  background: #01d28e;
-  border: 1px solid #01d28e;
-  color: #fff;
-  padding: 10px 20px;
-}
-
-input[type="submit"]:hover {
-  background: #6cf0c2;
-}
-
-.button-container {
-  display: flex;
-  justify-content: center;
+  /* background-color: #f2f1fd; */
+  /* background-image: url(https://source.unsplash.com/random/1920x1080/?wallpaper,landscape); */
+  /* background-repeat: no-repeat; */
 }
 
 .login-form {
   background-color: white;
   padding: 2rem;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-.list-container {
-  display: flex;
 }
 
 .error {
